@@ -1,0 +1,22 @@
+Little Registry Cleaner 1.4
+Website: http://sourceforge.net/projects/littlecleaner
+Microsoft Windows NT 6.1.7600.0
+
+Started scan at 08/11/2009 10:06:56 PM
+
+Starting scanning: Application Settings
+Scanning HKEY_LOCAL_MACHINE\SOFTWARE for empty registry keys
+Scanning HKEY_CURRENT_USER\SOFTWARE for empty registry keys
+Bad Registry Key Found! Problem: "The registry key doesn't contain any data" Path: "HKEY_CURRENT_USER\SOFTWARE\Hagel"
+Scanning HKEY_LOCAL_MACHINE\SOFTWARE\Wow6432Node for empty registry keys
+Bad Registry Key Found! Problem: "The registry key doesn't contain any data" Path: "HKEY_LOCAL_MACHINE\SOFTWARE\Wow6432Node\Hagel"
+Bad Registry Key Found! Problem: "The registry key doesn't contain any data" Path: "HKEY_LOCAL_MACHINE\SOFTWARE\Wow6432Node\RDesc"
+Bad Registry Key Found! Problem: "The registry key doesn't contain any data" Path: "HKEY_LOCAL_MACHINE\SOFTWARE\Wow6432Node\WiseCleaner"
+Scanning HKEY_CURRENT_USER\SOFTWARE\Wow6432Node for empty registry keys
+Finished scanning: Application Settings
+
+Total time elapsed: 0.306 seconds
+Total problems found: 4
+Total objects scanned: 204
+
+Finished scan at 08/11/2009 10:06:57 PM
