@@ -330,5 +330,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 - Translated strings that are not controls and are in the code files
 - Fixed error when switching to chinese (traditional or simplified)
 - Upgraded TreeView Advanced to version 1.7
+- Expands all nodes when finished scanning registry
+- Added a sorter tree model so the results can be sorted
 
 + Version 1.4 Released
